--- a/SimpleEcommerceAspNet6/Areas/Manager/Views/Shared/_ManagerLayout.cshtml
+++ b/SimpleEcommerceAspNet6/Areas/Manager/Views/Shared/_ManagerLayout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Enlink - Admin Dashboard Template</title>
+    <title>Admin Dashboard</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="~/area.manager.assets/images/logo/favicon.png">
@@ -12,6 +12,9 @@
     <!-- page css -->
     <!-- Core css -->
     <link href="~/area.manager.assets/css/app.min.css" rel="stylesheet">
+    <link href="~/area.manager.assets/css/logo.css" rel="stylesheet" />
+
+   
 </head>
 
 <body>
@@ -26,13 +29,22 @@
             <!-- Side Nav END -->
 
             <!-- Page Container START -->
-            @RenderBody()
+            <div class="page-container">
+            <!-- Content Wrapper START -->
+                <div class="main-content">
+                    @RenderBody()
+                </div>
+                <!-- Content Wrapper END -->
+                <!-- Footer START -->
+                @await Html.PartialAsync("_FooterPartialView")
+                <!-- Footer END -->
+            </div>
+
             <!-- Page Container END -->
 
-            <!-- Footer START -->
-            @await Html.PartialAsync("_FooterPartialView")
-            <!-- Footer END -->
-
+           
+        </div>
+    </div>
     <!-- Core Vendors JS -->
     <script src="~/area.manager.assets/js/vendors.min.js"></script>
 
@@ -41,7 +53,10 @@
     <script src="~/area.manager.assets/js/pages/dashboard-default.js"></script>
     <!-- Core JS -->
     <script src="~/area.manager.assets/js/app.min.js"></script>
-
+    <!-- page js -->
+    <script src="~/area.manager.assets/vendors/quill/quill.min.js"></script>
+    @await Component.InvokeAsync("Notyf")
+    @await RenderSectionAsync("Script",required: false)
 </body>
 
 </html>
