--- a/SimpleEcommerceAspNet6/Areas/Manager/Views/Shared/_SideNavPartialView.cshtml
+++ b/SimpleEcommerceAspNet6/Areas/Manager/Views/Shared/_SideNavPartialView.cshtml
@@ -3,29 +3,12 @@
     <div class="side-nav-inner">
         <ul class="side-nav-menu scrollable">
             <li class="nav-item dropdown open">
-                <a class="dropdown-toggle" href="javascript:void(0);">
+                <a class="dropdown-toggle" asp-area="Manager" asp-controller="DashBoard" asp-action="Index">
                     <span class="icon-holder">
                         <i class="anticon anticon-dashboard"></i>
                     </span>
                     <span class="title">Dashboard</span>
-                    <span class="arrow">
-                        <i class="arrow-icon"></i>
-                    </span>
                 </a>
-                <ul class="dropdown-menu">
-                    <li class="active">
-                        <a href="index.html">Default</a>
-                    </li>
-                    <li>
-                        <a href="index-crm.html">CRM</a>
-                    </li>
-                    <li>
-                        <a href="index-e-commerce.html">E-commerce</a>
-                    </li>
-                    <li>
-                        <a href="index-projects.html">Projects</a>
-                    </li>
-                </ul>
             </li>
             <li class="nav-item dropdown">
                 <a class="dropdown-toggle" href="javascript:void(0);">
@@ -283,7 +266,7 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a href="login-1.html">Login 1</a>
+                        <a asp-area="Manager" asp-controller="ManageRoles" asp-action="Index" >Quản Lý Quyền Truy Cập</a>
                     </li>
                     <li>
                         <a href="login-2.html">Login 2</a>
