--- a/SimpleEcommerceAspNet6/Areas/Manager/Views/Shared/_SideNavPartialView.cshtml
+++ b/SimpleEcommerceAspNet6/Areas/Manager/Views/Shared/_SideNavPartialView.cshtml
@@ -15,17 +15,17 @@
                     <span class="icon-holder">
                         <i class="anticon anticon-appstore"></i>
                     </span>
-                    <span class="title">Apps</span>
+                    <span class="title">Quản Lý Kho Hàng</span>
                     <span class="arrow">
                         <i class="arrow-icon"></i>
                     </span>
                 </a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a href="app-chat.html">Chat</a>
+                        <a asp-area="Manager" asp-controller="ManageCategories" asp-action="Index">Danh Mục Sản Phẩm</a>
                     </li>
                     <li>
-                        <a href="app-file-manager.html">File Manager</a>
+                        <a asp-area="Manager" asp-controller="ManageProducts" asp-action="Index">Sản Phẩm</a>
                     </li>
                     <li>
                         <a href="app-mail.html">Mail</a>
@@ -269,7 +269,7 @@
                         <a asp-area="Manager" asp-controller="ManageRoles" asp-action="Index" >Quản Lý Quyền Truy Cập</a>
                     </li>
                     <li>
-                        <a href="login-2.html">Login 2</a>
+                        <a asp-area="Manager" asp-controller="ManageUsers" asp-action="Index">Quản Lý Tài Khoản</a>
                     </li>
                     <li>
                         <a href="login-3.html">Login 3</a>
