--- a/SimpleEcommerceAspNet6/Areas/Manager/Views/_ViewImports.cshtml
+++ b/SimpleEcommerceAspNet6/Areas/Manager/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SimpleEcommerceAspNet6
 @using SimpleEcommerceAspNet6.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, PagedList.Core.Mvc
